Update the title

--- a/tutorials/16-homesale-forecasting.ipynb
+++ b/tutorials/16-homesale-forecasting.ipynb
@@ -5,8 +5,10 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMRs4OhSD+xFDErR5d6n38S",
-      "include_colab_link": true
+      "collapsed_sections": [
+        "GHToaA_NKiHY"
+      ],
+      "authorship_tag": "ABX9TyPDYDZy7r2CJmf1GcxtVkx9"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,13 +21,24 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/georgia-tech-db/evadb/blob/1063-add-a-model-forecasting-notebook-in-tutorials/tutorials/16-homesale-forecasting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+        "# Home Sale Forecasting\n",
+        "In this tutorial, we demonstrate how to use the forecasting capablity of EvaDB to predict the home sale price.\n",
+        "<table align=\"left\">\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/georgia-tech-db/eva/blob/master/tutorials/16-homesale-forecasting.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" /> Run on Google Colab</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/georgia-tech-db/eva/blob/master/tutorials/16-homesale-forecasting.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" /> View source on GitHub</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/georgia-tech-db/eva/raw/master/tutorials/16-homesale-forecasting.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\" /> Download notebook</a>\n",
+        "  </td>\n",
+        "</table><br><br>"
+      ],
+      "metadata": {
+        "id": "QjHMHmrUW0Vg"
+      }
     },
     {
       "cell_type": "markdown",
