Add test for sd and other minor fixes

--- a/tutorials/16-stable-diffusion.ipynb
+++ b/tutorials/16-stable-diffusion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install --quiet \"evadb[document,notebook]\"\n",
     "import evadb\n",
@@ -38,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,9 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to EvaDB!\n",
+      "Enter your image prompts one by one; type 'exit' to stop entering prompts.\n",
+      "========================================\n",
+      "Brown elephant riding a rocket to the moon\n"
+     ]
+    }
+   ],
    "source": [
     "# getting user input\n",
     "prompts = get_user_input()"
@@ -82,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<evadb.models.storage.batch.Batch at 0x7f9be4ca1010>"
+       "<evadb.models.storage.batch.Batch at 0x7f7dfd584dd0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +162,7 @@
    "source": [
     "# set up the stable diffusion UDF available at functions/stable_diffusion.py\n",
     "cursor.query(\"\"\"CREATE FUNCTION IF NOT EXISTS StableDiffusion\n",
-    "            IMPL  'evadb/functions/stable_diffusion.py';\n",
+    "            IMPL  '../evadb/functions/stable_diffusion.py';\n",
     "                \"\"\").execute()"
    ]
   },
@@ -156,12 +175,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<evadb.models.storage.batch.Batch at 0x7f7d21000bd0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# delete the table if it already exists\n",
-    "cursor.query(\"\"\"DROP TABLE ImageGen\n",
+    "cursor.query(\"\"\"DROP TABLE IF EXISTS ImageGen\n",
     "                \"\"\").execute()\n",
     "\n",
     "# create the table specifying the type of the prompt column\n",
@@ -197,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,27 +254,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<img src=\"https://pbxt.replicate.delivery/MepV6GPZeqqlUEGhMfZ7yUUWjh9h4o5rXIgjnFxxfdlr6oaGB/out-0.png\"/>"
+       "<img src=\"https://pbxt.replicate.delivery/FSnnvNbCAI6dNZRMkix1HYhXKeBDvPeQHAlnurvOpRx9p1oRA/out-0.png\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# visualize the generated image\n",
-    "Image(url=generated_images[1])"
+    "Image(url=generated_images[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
