--- a/tutorials/17-home-rental-prediction.ipynb
+++ b/tutorials/17-home-rental-prediction.ipynb
@@ -2411,7 +2411,51 @@
       "source": [
         "### Data Preprocessing \n",
         "\n",
-        "A way to improve model performance is ensuring the data it is trained on is high-quality. Data preprocessing can remove undesired features from a dataset and go a long way in improving a model's generalization to independent data. For example, models are extremely sensitive to outliers in the training data by distorting the learned patterns and making the model harder to generalize. It is therefore in the user's best interest to remove outliers before the model training. One method to remove outliers is the IQR method, and an example of how it can be implemented on the House Rent data is shown below. "
+        "A way to improve model performance is ensuring the data it is trained on is high-quality. Data preprocessing can remove undesired features from a dataset and go a long way in improving a model's generalization to independent data. For example, models are extremely sensitive to outliers in the training data by distorting the learned patterns and making the model harder to generalize. It is therefore in the user's best interest to remove outliers before the model training. One method to remove outliers is the IQR method, and an example of how it can be implemented on the House Rent data is shown below. In this case, we remove data points for any houses whose rental prices are either much higher or much lower than the manjority of the dataset. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# adds an id number to each row in the table to make removing rows easier \n",
+        "cursor.query(\"\"\"\n",
+        " USE postgres_data {\n",
+        "      ALTER TABLE home_rentals\n",
+        "      ADD COLUMN home_id SERIAL;\n",
+        "    }\n",
+        "\"\"\").df()\n",
+        "\n",
+        "\n",
+        "all_data = cursor.query(\"SELECT * FROM postgres_data.home_rentals;\").df()\n",
+        "\n",
+        "q1 = all_data['rental_price'].quantile(0.25)\n",
+        "q3 = all_data['rental_price'].quantile(0.75)\n",
+        "iqr = q3 - q1 \n",
+        "\n",
+        "\n",
+        "outliers = all_data[(all_data['rental_price'] < (q1 - 1.5 * iqr)) | (all_data['rental_price'] > (q3 + 1.5 * iqr))]\n",
+        "\n",
+        "for index, row in outliers.iterrows():\n",
+        "  cur_id = row['home_id']\n",
+        "  cur_query = \"\"\"\n",
+        "    USE postgres_data {\n",
+        "      DELETE FROM home_rentals\n",
+        "      WHERE home_id = '\"\"\" + str(cur_id) + \"\"\"'\n",
+        "    }\n",
+        "  \"\"\"\n",
+        "  cursor.query(cur_query).df()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Removing outliers via IQR is simply one method of one type of data preprocessing. Other types of data preprocessing include handling missing data (if applicable), duplicate removal, data scaling (normalizing numerical features to bring them to a similar scale), categorical data encoding (converting categorical data into values that can be incorporated into models), and oversampling and undersampling (to handle imbalanced data).\n",
+        "\n",
+        "The methods necessary are dependent on the dataset chosen. If implemented properly, they can greatly improve the model's accuracy and performance."
       ]
     }
   ],
