--- a/tutorials/17-home-rental-prediction.ipynb
+++ b/tutorials/17-home-rental-prediction.ipynb
@@ -2286,7 +2286,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The slightly harder task is judging how effective a model is at predicting a certain value. Accuracy is one metric commonly used to judge ML models. An example of how accuracy can be calculated for our House Rent Predictor is shown below: "
+        "The slightly harder task is judging how effective a model is at predicting a certain value. Accuracy is one metric commonly used to judge ML models. It works best for evaluating models when the output is categorical and discrete rather than continuous. An example of how accuracy can be calculated for our House Rent Predictor is shown below. "
       ]
     },
     {
@@ -2309,7 +2309,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The user can now test various combinations of features in order to determine which results in the best model. "
+        "The user can now test various combinations of features in order to determine which results in the best model. To evaluate models with a continous output, mean squared error may give a better judge of how the model is performing, and an example of how it is calculated can be found in the next section. "
       ]
     },
     {
