Added default env path as mentioned in the docs 	modified:   .gitignore Added file to extract on column at a time 	new file:   evadb/functions/extract_column.py Removed the previous implementation 	deleted:    evadb/functions/extract_columns.py Updated the notebook 	modified:   tutorials/20-structured-data.ipynb

--- a/tutorials/20-structured-data.ipynb
+++ b/tutorials/20-structured-data.ipynb
@@ -22,6 +22,17 @@
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/hershdhillon23/projects/evadb/evadb-venv/lib/python3.9/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n",
+      "Downloading: \"http://ml.cs.tsinghua.edu.cn/~chenxi/pytorch-models/mnist-b07bb66b.pth\" to /Users/hershdhillon23/.cache/torch/hub/checkpoints/mnist-b07bb66b.pth\n",
+      "100%|██████████| 1.03M/1.03M [00:01<00:00, 697kB/s] \n",
+      "Downloading: \"https://download.pytorch.org/models/fasterrcnn_resnet50_fpn_coco-258fb6c6.pth\" to /Users/hershdhillon23/.cache/torch/hub/checkpoints/fasterrcnn_resnet50_fpn_coco-258fb6c6.pth\n"
+     ]
     }
    ],
    "source": [
@@ -32,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,30 +55,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<evadb.models.storage.batch.Batch at 0x7f97cc872950>"
+       "<evadb.models.storage.batch.Batch at 0x176ef33d0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# set up the extract columns UDF available at functions/extract_columns.py\n",
-    "cursor.query(\"\"\"CREATE FUNCTION IF NOT EXISTS ExtractColumns\n",
-    "            IMPL  '../evadb/functions/extract_columns.py';\n",
+    "cursor.query(\"\"\"CREATE FUNCTION IF NOT EXISTS ExtractColumn\n",
+    "            IMPL  '../evadb/functions/extract_column.py';\n",
     "                \"\"\").execute()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -133,33 +144,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"Issue Category\": \"hardware\",\n",
-      "  \"Raw Issue String\": \"The touch screen on my tablet stopped working for no reason.\",\n",
-      "  \"Issue Component\": \"touch screen\"\n",
-      "}\n",
-      "{\n",
-      "  \"Issue Category\": \"hardware\",\n",
-      "  \"Raw Issue String\": \"My headphones won't connect to my phone anymore, even though they used to work just fine.\",\n",
-      "  \"Issue Component\": \"headphones\"\n",
-      "}\n",
-      "{\n",
-      "  \"Issue Category\": \"software\",\n",
-      "  \"Raw Issue String\": \"The software update completely messed up my computer. Now nothing works properly.\",\n",
-      "  \"Issue Component\": \"computer\"\n",
-      "}\n"
+      "\n",
+      "            You are given a user query. Your task is to extract the following fields from the query and return the result in string format.\n",
+      "            IMPORTANT: RETURN ONLY THE EXTRACTED VALUE (one word or phrase). DO NOT RETURN THE FIELD NAME OR ANY OTHER INFORMATION.\n",
+      "        \n",
+      "\n",
+      "            Extract the following fields from the unstructured text below:\n",
+      "            \n",
+      "            Format of the field is given in the format\n",
+      "            Field Name: Field Description: Field Type\n",
+      "            Issue Component: The component that is causing the issue: string less than 2 words\n",
+      "\n",
+      "            The unstructured text is as follows:\n",
+      "        \n",
+      "The touch screen on my tablet stopped working for no reason.\n",
+      "My headphones won't connect to my phone anymore, even though they used to work just fine.\n",
+      "The software update completely messed up my computer. Now nothing works properly.\n",
+      "touch screen\n",
+      "headphones, connect, phone, work, fine\n",
+      "software update\n"
      ]
     }
    ],
    "source": [
-    "table = cursor.query(\"SELECT ExtractColumns(input_rows) FROM InputUnstructured;\").df()\n",
+    "table = cursor.query(\n",
+    "        \"\"\"SELECT ExtractColumn(\"Issue Component\",\"The component that is causing the issue\", \"string less than 2 words\", input_rows) FROM InputUnstructured;\"\"\"\n",
+    "    ).df()\n",
     "\n",
     "for _, row in table.iterrows():\n",
     "    print(row['response'])\n",
@@ -190,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
