--- a/tutorials/20-structured-data.ipynb
+++ b/tutorials/20-structured-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,28 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hershdhillon23/projects/evadb/evadb-venv/lib/python3.9/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n",
-      "Downloading: \"http://ml.cs.tsinghua.edu.cn/~chenxi/pytorch-models/mnist-b07bb66b.pth\" to /Users/hershdhillon23/.cache/torch/hub/checkpoints/mnist-b07bb66b.pth\n",
-      "100%|██████████| 1.03M/1.03M [00:01<00:00, 697kB/s] \n",
-      "Downloading: \"https://download.pytorch.org/models/fasterrcnn_resnet50_fpn_coco-258fb6c6.pth\" to /Users/hershdhillon23/.cache/torch/hub/checkpoints/fasterrcnn_resnet50_fpn_coco-258fb6c6.pth\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install --quiet \"evadb[document,notebook]\"\n",
     "import evadb\n",
@@ -43,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,20 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<evadb.models.storage.batch.Batch at 0x176ef33d0>"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set up the extract columns UDF available at functions/extract_columns.py\n",
     "cursor.query(\"\"\"CREATE FUNCTION IF NOT EXISTS ExtractColumn\n",
@@ -78,19 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # delete the table if it already exists\n",
     "cursor.query(\"\"\"DROP TABLE IF EXISTS InputUnstructured\n",
@@ -107,15 +67,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "input_rows_list = [\"The touch screen on my tablet stopped working for no reason.\",\n",
-    "#                   \"Why does my computer take so long to start up? It's been like this for weeks.\",\n",
-    "#                   \"My phone battery dies too quickly. I just bought it!\",\n",
+    "                    \"Why does my computer take so long to start up? It's been like this for weeks.\",\n",
+    "                    \"My phone battery dies too quickly. I just bought it!\",\n",
     "                    \"My headphones won't connect to my phone anymore, even though they used to work just fine.\",\n",
-    "                   \"The software update completely messed up my computer. Now nothing works properly.\"]\n",
+    "                    \"The software update completely messed up my computer. Now nothing works properly.\"]\n",
     "\n",
     "for input_row in input_rows_list:\n",
     "    cursor.query(f\"\"\"INSERT INTO InputUnstructured (input_rows) VALUES (\"{input_row}\")\"\"\").execute()\n"
@@ -123,20 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   _row_id                                         input_rows\n",
-      "0        1  The touch screen on my tablet stopped working ...\n",
-      "1        2  My headphones won't connect to my phone anymor...\n",
-      "2        3  The software update completely messed up my co...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "table = cursor.query(\"SELECT * FROM InputUnstructured;\").df()\n",
     "print(table)"
@@ -144,35 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "            You are given a user query. Your task is to extract the following fields from the query and return the result in string format.\n",
-      "            IMPORTANT: RETURN ONLY THE EXTRACTED VALUE (one word or phrase). DO NOT RETURN THE FIELD NAME OR ANY OTHER INFORMATION.\n",
-      "        \n",
-      "\n",
-      "            Extract the following fields from the unstructured text below:\n",
-      "            \n",
-      "            Format of the field is given in the format\n",
-      "            Field Name: Field Description: Field Type\n",
-      "            Issue Component: The component that is causing the issue: string less than 2 words\n",
-      "\n",
-      "            The unstructured text is as follows:\n",
-      "        \n",
-      "The touch screen on my tablet stopped working for no reason.\n",
-      "My headphones won't connect to my phone anymore, even though they used to work just fine.\n",
-      "The software update completely messed up my computer. Now nothing works properly.\n",
-      "touch screen\n",
-      "headphones, connect, phone, work, fine\n",
-      "software update\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "table = cursor.query(\n",
     "        \"\"\"SELECT ExtractColumn(\"Issue Component\",\"The component that is causing the issue\", \"string less than 2 words\", input_rows) FROM InputUnstructured;\"\"\"\n",
@@ -182,6 +105,13 @@
     "    print(row['response'])\n",
     "#print(table.iloc[1]['response'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
