Resolved review comments

--- a/tutorials/20-structured-data.ipynb
+++ b/tutorials/20-structured-data.ipynb
@@ -59,10 +59,7 @@
     "# create the table specifying the type of the prompt column\n",
     "cursor.query(\"\"\"CREATE TABLE IF NOT EXISTS InputUnstructured (\n",
     "             input_rows TEXT)\n",
-    "                \"\"\").execute()\n",
-    "\n",
-    "table = cursor.query(\"SELECT * FROM InputUnstructured;\").df()\n",
-    "print(table)"
+    "                \"\"\").execute()"
    ]
   },
   {
@@ -87,8 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = cursor.query(\"SELECT * FROM InputUnstructured;\").df()\n",
-    "print(table)"
+    "table = cursor.query(\"SELECT * FROM InputUnstructured;\").df()"
    ]
   },
   {
@@ -102,8 +98,7 @@
     "    ).df()\n",
     "\n",
     "for _, row in table.iterrows():\n",
-    "    print(row['response'])\n",
-    "#print(table.iloc[1]['response'])"
+    "    print(row['response'])"
    ]
   },
   {
